--- a/FileSyncDesktop/App.xaml
+++ b/FileSyncDesktop/App.xaml
@@ -1,9 +1,16 @@
-﻿<Application x:Class="file_sync_win.App"
+﻿<Application x:Class="FileSyncDesktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:file_sync_win"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:FileSyncDesktop"
+             >
+
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:Bootstrapper x:Key="Bootstrapper" />
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
